--- a/src/app/components/countries/countries.component.scss
+++ b/src/app/components/countries/countries.component.scss
@@ -2,9 +2,26 @@
     background-color: #c8dbf4;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 10px;
+    padding: 20px;
 }
 
 h2 {
     text-align: center;
+}
+
+.search {
+    margin-left: 40px;
+
+    input {
+        width: 400px;
+        height: 25px;
+        background: transparent;
+        border: 1px solid #000;
+        border-radius: 3px;
+        padding: 5px 10px;
+    }
+
+    input:focus {
+        outline: none;
+    }
 }
