--- a/src/app/components/countries/countries.component.html
+++ b/src/app/components/countries/countries.component.html
@@ -9,7 +9,8 @@
                 <app-country [country]="country"></app-country>
                 <app-voting [itemName]="country.name" [votes]="votes" (voted)="voted($event)"></app-voting>
             </li>
-            <p *ngIf="!results.length">No items match your search.</p>
+            <p *ngIf="countries.length && !results.length">No items match your search.</p>
         </ol>
+        <p *ngIf="isLoading" class="loading">Loading...</p>
     </div>
 </div>
