--- a/src/app/components/voting/voting.component.html
+++ b/src/app/components/voting/voting.component.html
@@ -1,7 +1,7 @@
 <div class="voting-wrapper">
     <p>Votes <span>{{sum}}</span></p>
     <div class="votes">
-        <img src="assets/images/up.svg" alt="up" (click)="upvote()">
-        <img src="assets/images/down.svg" alt="down" (click)="downvote()">
+        <img src="/assets/images/up.svg" alt="up" (click)="upvote()">
+        <img src="/assets/images/down.svg" alt="down" (click)="downvote()">
     </div>
 </div>
